benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_ModExpPow2_Mul_iter1_error.log
=== Verification Error - Iteration 1 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_ModExpPow2_Mul.rs
Time: 2025-09-15 20:51:12

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_ModExpPow2_Mul_impl.rs:82:20
   |
82 |     ValidBitString(result@),
   |                    ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_ModExpPow2_Mul_impl.rs:83:13
   |
83 |     Str2Int(result@) == n,
   |             ^^^^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_ModExpPow2_Mul_impl.rs:82:20
   |
82 |     ValidBitString(result@),
   |                    ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_ModExpPow2_Mul_impl.rs:83:13
   |
83 |     Str2Int(result@) == n,
   |             ^^^^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
